Removing code smells: unused variable and simplified stream