@@ -16,7 +16,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * 🐱miniclass KameletBindingStepParserService (StepParserService)
@@ -52,7 +51,7 @@ public class KameletBindingStepParserService
 
         return steps.stream()
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void processSpec(final List<Step> steps,
